Many attempts to correct filesharing, this is still semi working, though after reinstall brings up the loading screen

--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -4,6 +4,10 @@
         name="external_files"
         path="." />
     <cache-path
-        name="cache_files"
+        name="my_cache_files"
         path="." />
+    <files-path
+        name="my_files"
+        path="." />
+
 </paths>
